<resources>
    <string name="app_name">LearningSquare</string>
    <string name="hello_constraintlayout">Welcome to Learning Square!</string>
    <string name="log_in">Log in</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="hello_student">Hello Student!</string>
    <string name="hello_instructor">Hello Instructor!</string>
    <string name="text_view_error_not_instructor">Dashboard is only available to instructors</string>
    <string name="signup_button">Sign Up</string>
    <string name="name_input">Name</string>
    <string name="email_input">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="instructor">Instructor</string>
    <string name="logo_description">Learning Square Logo</string>
    <string name="add_student_to_course">Add student to course</string>
    <string name="student_username">Student username</string>
    <string name="add_students_to_course">Add students to course</string>
    <string name="course_description">Course Description</string>
    <string name="course_name">Course Name</string>
    <string name="view_course">View Course</string>
    <string name="edit_course">Edit Course</string>
    <string name="add">Add</string>
    <string name="student_name">Student Name</string>
    <string name="assignments">Assignments</string>
    <string name="courses">Courses</string>
    <string name="assignment_name">Assignment Name</string>
    <string name="assignment_due_date">Assignment Due Date</string>
    <string name="view_assignment">View Assignment</string>
    <string name="welcome_to_assignments">Welcome to Assignments</string>
    <string name="create_new_assignment">Create New Assignment</string>
    <string name="question">Question:</string>
    <string name="enter_question">Enter question</string>
    <string name="options">Options:</string>
    <string name="option_1">Option 1</string>
    <string name="option_2">Option 2</string>
    <string name="option_3">Option 3</string>
    <string name="option_4">Option 4</string>
    <string name="correct_answer">Correct Answer:</string>
    <string name="add_question">Add Question</string>
    <string name="create_assignment">Create Assignment</string>
    <string name="questions">Questions:</string>
    <string name="select_due_date">Select due date</string>
    <string name="due_date">Due Date:</string>
    <string name="enter_assignment_name">Enter assignment name</string>
    <string name="Status">Status: </string>
    <string name="assignment_details">Assignment Details</string>
    <string name="published">Published</string>
    <string name="save_changes">Save Changes</string>
    <string name="clear_changes">Clear Changes</string>
    <string name="my_info">My Info</string>
    <string name="delete_account">Delete Account</string>
    <string name="mail">mail</string>
    <string name="Username">Username</string>
    <string name="old_password">Current password</string>
    <string name="new_password">New password</string>
    <string name="recovery_email">Recovery email</string>
    <string name="submit_changes">Submit_changes</string>
    <string name="update_Password">Update password</string>
    <string name="Set_Recovery_Button">Recovery Email</string>
    <string name="change_password">Change Password</string>
    <string name="update_recovery_email">Update recovery email</string>
    <string name="take_profile_picture">Take Profile Picture</string>
    <string name="profile_pic">Profile Picture</string>
    <string name="submit_assignment">Submit Assignment</string>
    <string name="grade">Grade:</string>
    <string name="no_grade_available">No Grade available</string>
    <string name="published_yes">Yes</string>
    <string name="assignments_for">Assignments for %1$s</string>
    <string name="average_grade_label">Average Grade: %1$.1f</string>
    <string name="due_time">Due Time</string>
    <string name="select_due_time">Select Due Time</string>
    <string name="due_at">Due at</string>
    <string name="upload_profile_picture">Upload Profile Picture</string>
    <string name="description">Description</string>
    <string name="create_course">Create Course</string>
    <string name="cancel">Cancel</string>
    <string name="average_grade_n_a">Average Grade: N/A</string>
    <string name="welcome_to_courses">Welcome to Courses</string>
    <string name="create_new_course">Create New Course</string>
    <string name="nothing_here_yet">Nothing here yet!</string>
    <string name="image_of_the_empty_set">image of the empty set</string>
    <string name="dashboard">Dashboard</string>
    <string name="log_out">Log out</string>
</resources>