<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        android:gravity="center_horizontal">

        <EditText
            android:id="@+id/userNameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:inputType="text"
            android:layout_marginBottom="16dp"
            android:minHeight="48dp"
            android:autofillHints="username"/>

        <EditText
            android:id="@+id/nameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_input"
            android:inputType="text"
            android:layout_marginBottom="16dp"
            android:minHeight="48dp"
            android:autofillHints="Name"/>

        <EditText
            android:id="@+id/emailInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_input"
            android:inputType="textEmailAddress"
            android:layout_marginBottom="16dp"
            android:minHeight="48dp"
            android:autofillHints="Email"/>

        <EditText
            android:id="@+id/passwordInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_marginBottom="16dp"
            android:minHeight="48dp"
            android:autofillHints="Email"/>

        <EditText
            android:id="@+id/confirmPasswordInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:layout_marginBottom="16dp"
            android:minHeight="48dp"
            android:autofillHints="Password"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <TextView
            android:id="@+id/isInstructorLabel"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textColor="#133191"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="@string/instructor">
        </TextView>

        <CheckBox
            android:id="@+id/isInstructorCheckbox"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:minHeight="48dp"
            android:layout_height="wrap_content"/>
        </LinearLayout>

        <Button
            android:id="@+id/confirmSignupButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:text="@string/signup_button"
            android:clickable="true"
            android:background="#0080FF"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>