<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/bottomNavBar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/black"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/buttonDashboard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dashboard"
            android:backgroundTint="@color/white"
            android:textColor="#2196F3"
            style="?android:attr/buttonBarButtonStyle"
            android:padding="8dp"/>

        <Button
            android:id="@+id/buttonCourses"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/courses"
            android:backgroundTint="@color/white"
            android:textColor="#2196F3"
            style="?android:attr/buttonBarButtonStyle"
            android:padding="8dp"/>

        <Button
            android:id="@+id/buttonAssignments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/assignments"
            android:backgroundTint="@color/white"
            android:textColor="#2196F3"
            style="?android:attr/buttonBarButtonStyle"
            android:padding="8dp"/>

        <Button
            android:id="@+id/buttonMyInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_info"
            android:backgroundTint="@color/white"
            android:textColor="#2196F3"
            style="?android:attr/buttonBarButtonStyle"
            android:padding="8dp"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>