<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.courses.CourseDetailsFragment">

    <LinearLayout
        android:id="@+id/courseDetailsSection"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <EditText
            android:id="@+id/courseNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:visibility="visible"
            android:background="@null"
            android:textSize="18sp"
            android:hint="@string/course_name"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/courseDescriptionEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:background="@null"
            android:visibility="visible"
            android:textSize="14sp"
            android:hint="@string/course_description"
            android:layout_marginTop="8dp" />

        <Button
            android:id="@+id/editCourseButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_course"
            android:layout_marginTop="8dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/addStudentLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/courseDetailsSection"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/addStudentLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/add_student_to_course"
            android:textColor="#133191"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/studentUserNameInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints="studentUsername"
            android:hint="@string/student_username"
            android:inputType="text"
            android:padding="8dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/addStudentGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/addStudentLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/addStudentButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:background="#0080FF"
            android:padding="8dp" />

        <TextView
            android:id="@+id/notifyUserTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottomNavBar"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:background="@color/black"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/buttonCourses"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/courses"
            android:textColor="#2196F3"
            style="?android:attr/buttonBarButtonStyle"
            android:padding="8dp"/>

    </LinearLayout>



    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewStudents"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/addStudentGroup"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>